--- a/Tienda final/nbproject/private/private.properties
+++ b/Tienda final/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Juan Holguin\\AppData\\Roaming\\NetBeans\\25\\build.properties
+user.properties.file=C:\\Users\\jose_\\AppData\\Roaming\\NetBeans\\25\\build.properties
