--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-# Compiled class files
+# Compiled class file
 *.class
 
-# Log files
+# Log file
 *.log
 
 # BlueJ files
@@ -10,42 +10,15 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files
+# Package Files #
+*.jar
 *.war
+*.nar
 *.ear
+*.zip
+*.tar.gz
+*.rar
 
-# Virtual machine crash logs
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
-# Maven
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-
-# Gradle
-.gradle/
-build/
-!gradle-wrapper.jar
-
-# Gradle Wrapper
-gradle-wrapper.jar
-gradle-wrapper.properties
-
-# NetBeans
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
-
-# Eclipse
-.settings/
-
-/Tienda final/nbproject/private/
-/Tienda final/build/
-*.properties
-*.class
+replay_pid*
