--- a/Tienda final/nbproject/project.properties
+++ b/Tienda final/nbproject/project.properties
@@ -33,17 +33,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Tienda
 excludes=
-file.reference.bson-5.5.0.jar=bson-5.5.0.jar
-file.reference.gson-2.13.1.jar=gson-2.13.1.jar
-file.reference.mongodb-driver-core-5.5.0.jar=mongodb-driver-core-5.5.0.jar
-file.reference.mongodb-driver-sync-5.5.0.jar=mongodb-driver-sync-5.5.0.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.gson-2.13.1.jar}:\
-    ${file.reference.mongodb-driver-sync-5.5.0.jar}:\
-    ${file.reference.bson-5.5.0.jar}:\
-    ${file.reference.mongodb-driver-core-5.5.0.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
